  b - fix for alligning qstat -r output when configured with -DTXT. (backported from 3.0.5)
  e - Change size of transfer block used on job rerun from 4k to 64k. (backported from 3.0.5)
  b - With nvidia gpus, TORQUE was losing the directive of what nodes it should
      run the job on from Moab. Corrected (backported from 3.0.5)

2.5.10 
  b - Fixed a problem where pbs_mom will crash of check_pwd returns NULL. This could
      happen for example if LDAP was down and getpwnam returns NULL.
  b - Removed a check for Interactive jobs in qsub and the -l flag. This check
      appeared to be code that was never completed and it prevented the passing
      of resource arguments.
  e - Added code to delete a job on the MOM if a job is in the EXITED substate and 
      going through the scan_for_exiting code. This happens when an obit has been
      sent and the obit reply received by the PBS_BATCH_DeleteJob has not been 
      received from the server on the MOM. This fix allows the MOM to delete the
      job and free up resources even if the server for some reason does not send 
      the delete job request.
  c - fix a crash in the dynamic_string.c code (backported from 3.0.3)
  e - add a mom config option - $ext_pwd_retry - to specify # of retries on 
      checking for password validity. (backported from 3.0.3)
  b - TRQ-608: Removed code to check for blocking mode in write_nonblocking_socket().
      Fixes problem with interactive jobs (qsub -I) exiting prematurely.
  c - fix a buffer being overrun with nvidia gpus enabled (backported from 3.0.4)
  b - To fix a problem in 2.5.9 where the job_array structure was modified
      without changing the version or creating an upgrade path. This made
      it incompatible with previous versions of TORQUE 2.5 and 3.0.
      Added new array structure job_array_259. This is the original torque
      2.5.9 job_array structure with the num_purged element added in the middle